force-app/main/default/objects/custom_create318__c/custom_create318__c.object-meta.xml
<CustomObject>
    <label>Custom created object318</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects318</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>