force-app/main/default/objects/custom_create318__c/fields/custom_create_318field566__c.field-meta.xml
<CustomField>
    <fullName>custom_create_318field566__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 318field566</label>
    <type>Checkbox</type>
</CustomField>