force-app/main/default/objects/custom_create318__c/fields/custom_create_318field708__c.field-meta.xml
<CustomField>
    <fullName>custom_create_318field708__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 318field708</label>
    <type>Checkbox</type>
</CustomField>